@@ -18,6 +18,7 @@ Bug Fixes:
 CAY-2806 Incorrect processing of unicode escape syntax in JSON
 CAY-2809 Cayenne Expression grammar doesn't allow custom function as an argument for string functions
 CAY-2810 Can't use custom operator expression with aggregate functions
+CAY-2813 Regression: Constants.CI_PROPERTY flag is no longer working for MySQL
 
 ----------------------------------
 Release: 4.2
